--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - 8080:80
     volumes:
       - boombit_data:/var/www/html:rw
-      - "./wp-content/themes:/var/www/html/wp-content/themes:rw"
+      - "./wp-content/themes/boombit-conf:/var/www/html/wp-content/themes/boombit-conf:rw"
       - "./config/uploads.ini:/usr/local/etc/php/conf.d/uploads.ini"
       - "./wp-content/debug.log:/var/www/html/wp-content/debug.log"
       # - "./wp-content/uploads:/var/www/html/wp-content/uploads:rw"
