--- a/wp-content/themes/boombit-conf/package.json
+++ b/wp-content/themes/boombit-conf/package.json
@@ -1,21 +1,20 @@
 {
     "name": "boombit-conf",
     "private": true,
-    "dependencies": {},
     "devDependencies": {
-      "browser-sync": "^2.26.12",
-      "browser-sync-webpack-plugin": "^2.2.2",
-      "css-loader": "^4.3.0",
-      "file-loader": "^6.1.0",
-      "mini-css-extract-plugin": "^0.11.2",
-      "sass": "^1.53.0",
-      "sass-loader": "^10.0.2",
-      "url-loader": "^4.1.0",
-      "webpack": "^4.44.1",
-      "webpack-cli": "^3.3.12"
+        "browser-sync": "^2.26.12",
+        "browser-sync-webpack-plugin": "^2.2.2",
+        "css-loader": "^4.3.0",
+        "file-loader": "^6.1.0",
+        "mini-css-extract-plugin": "^0.11.2",
+        "sass": "^1.53.0",
+        "sass-loader": "^10.0.2",
+        "url-loader": "^4.1.0",
+        "webpack": "^5.78.0",
+        "webpack-cli": "^3.3.12"
     },
     "scripts": {
-      "build": "webpack --mode production",
-      "dev": "webpack --mode development --watch"
+        "build": "webpack --mode production",
+        "dev": "webpack --mode development --watch --openssl-legacy-provider"
     }
-  }
+}
