--- a/wp-content/themes/boombit-conf/composer.json
+++ b/wp-content/themes/boombit-conf/composer.json
@@ -16,9 +16,14 @@
     }
   ],
   "require": {
-	  "timber/timber": "1.*"
+	  "timber/timber": "1.22.1"
   },
   "require-dev": {
     "phpunit/phpunit": "5.7.16|6.*"
+  },
+  "config": {
+    "allow-plugins": {
+      "composer/installers": true
+    }
   }
 }
