--- a/wp-content/themes/boombit-conf/package.json
+++ b/wp-content/themes/boombit-conf/package.json
@@ -11,10 +11,13 @@
         "sass-loader": "^10.0.2",
         "url-loader": "^4.1.0",
         "webpack": "^5.78.0",
-        "webpack-cli": "^3.3.12"
+        "webpack-cli": "^5.0.1"
     },
     "scripts": {
         "build": "webpack --mode production",
-        "dev": "webpack --mode development --watch --openssl-legacy-provider"
+        "dev": "webpack --mode development --watch"
+    },
+    "dependencies": {
+        "bootstrap": "^5.2.3"
     }
 }
