Autoload includes classes

--- a/wp-content/themes/boombit-conf/composer.json
+++ b/wp-content/themes/boombit-conf/composer.json
@@ -25,5 +25,13 @@
     "allow-plugins": {
       "composer/installers": true
     }
+  },
+  "autoload":{
+    "psr-4": {
+      "Boombit\\": "includes/"
+  },
+  "classmap": [
+      "includes/"
+  ]
   }
 }
