--- a/wp-content/themes/boombit-conf/package.json
+++ b/wp-content/themes/boombit-conf/package.json
@@ -2,13 +2,19 @@
     "name": "boombit-conf",
     "private": true,
     "devDependencies": {
+        "@babel/core": "^7.21.4",
+        "@babel/preset-env": "^7.21.4",
+        "autoprefixer": "^10.4.14",
+        "babel-loader": "^9.1.2",
         "browser-sync": "^2.26.12",
         "browser-sync-webpack-plugin": "^2.2.2",
         "css-loader": "^4.3.0",
         "file-loader": "^6.1.0",
         "mini-css-extract-plugin": "^0.11.2",
-        "sass": "^1.53.0",
-        "sass-loader": "^10.0.2",
+        "postcss-loader": "^7.2.4",
+        "sass": "^1.61.0",
+        "sass-loader": "^10.4.1",
+        "style-loader": "^3.3.2",
         "url-loader": "^4.1.0",
         "webpack": "^5.78.0",
         "webpack-cli": "^5.0.1"
@@ -18,6 +24,7 @@
         "dev": "webpack --mode development --watch"
     },
     "dependencies": {
+        "@popperjs/core": "^2.11.7",
         "bootstrap": "^5.2.3"
     }
 }
