Add plugins to docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - "./config/uploads.ini:/usr/local/etc/php/conf.d/uploads.ini"
       - "./wp-content/debug.log:/var/www/html/wp-content/debug.log"
       # - "./wp-content/uploads:/var/www/html/wp-content/uploads:rw"
-      # - "./wp-content/plugins:/var/www/html/wp-content/plugins:rw"
+      - "./wp-content/plugins:/var/www/html/wp-content/plugins:rw"
     environment:
       WORDPRESS_DB_HOST: db:3306
       WORDPRESS_DB_NAME: "${DB_NAME}"
