--- a/wp-content/themes/boombit-conf/package.json
+++ b/wp-content/themes/boombit-conf/package.json
@@ -10,7 +10,7 @@
         "browser-sync-webpack-plugin": "^2.2.2",
         "css-loader": "^4.3.0",
         "file-loader": "^6.1.0",
-        "mini-css-extract-plugin": "^0.11.2",
+        "mini-css-extract-plugin": "^2.7.5",
         "postcss-loader": "^7.2.4",
         "sass": "^1.61.0",
         "sass-loader": "^10.4.1",
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.7",
-        "bootstrap": "^5.2.3"
+        "bootstrap": "^5.2.3",
+        "bootstrap-icons": "^1.10.4"
     }
 }
