--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,10 @@
-# MYSQL
 MYSQL_ROOT_PASSWORD=root
-MYSQL_USERNAME=root
+MYSQL_USERNAME=boombit_user
 
 # Wordpress
 DB_NAME=wp_app
-DB_USER=root
+DB_USER=boombit_user
 DB_PASSWORD=root
+
+APP_NAME=boombit_conf
+COMPOSE_PROJECT=boombit
